--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
         <button class="botao">Fazer uma faculdade</button>
       </div>
     </section>
-  </body>
-</html>
 <div class="conteudo">
   <div class="botoes">
     <button class="botao ativo">Cursos na Alura</button>
@@ -59,3 +57,15 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+    <script src="main.js"></script>
+    
+  </body>
+</html>
